docs/apache-airflow-providers-teradata/2.1.1/_sources/_api/airflow/providers/teradata/operators/teradata/index.rst.txt
:py:mod:`airflow.providers.teradata.operators.teradata`
=======================================================

.. py:module:: airflow.providers.teradata.operators.teradata


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.teradata.operators.teradata.TeradataOperator




.. py:class:: TeradataOperator(conn_id = TeradataHook.default_conn_name, schema = None, **kwargs)


   Bases: :py:obj:`airflow.providers.common.sql.operators.sql.SQLExecuteQueryOperator`

   General Teradata Operator to execute queries on Teradata Database.

   Executes sql statements in the Teradata SQL Database using teradatasql jdbc driver

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:TeradataOperator`

   :param sql: the SQL query to be executed as a single string, or a list of str (sql statements)
   :param conn_id: reference to a predefined database
   :param autocommit: if True, each command is automatically committed.(default value: False)
   :param parameters: (optional) the parameters to render the SQL query with.
   :param schema: The Teradata database to connect to.

   .. py:attribute:: template_fields
      :type: Sequence[str]
      :value: ('parameters', 'sql')

      

   .. py:attribute:: template_ext
      :type: Sequence[str]
      :value: ('.sql',)

      

   .. py:attribute:: template_fields_renderers

      

   .. py:attribute:: ui_color
      :value: '#e07c24'

      


